v0.2.0. Adding sending api json support with extended resulting info. Introducing new api: callcheck & code call